[gd_scene load_steps=8 format=3 uid="uid://dm68apr1kva7n"]

[ext_resource type="Script" path="res://Scripts/Enemy/ShooterEnemy.gd" id="1_0u2js"]
[ext_resource type="ArrayMesh" uid="uid://uojtxpme1fdq" path="res://Models/Enemy/ShooterEnemy.obj" id="2_nc2fv"]
[ext_resource type="Material" uid="uid://lm33pemnsjds" path="res://Materials/ShooterEnemyMaterial.tres" id="3_e8lku"]
[ext_resource type="AudioStream" uid="uid://cvxp73qi656k" path="res://Sounds/bulletShoot.wav" id="3_ktd2o"]
[ext_resource type="Animation" uid="uid://cj3o51dr73cgo" path="res://Animations/Idle.res" id="4_thlqf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cpty7"]
size = Vector3(1.3, 1.3, 1.3)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1gdw3"]
_data = {
"Idle": ExtResource("4_thlqf")
}

[node name="ShooterEnemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.868274, 0)
collision_layer = 16
collision_mask = 79
script = ExtResource("1_0u2js")
health = 2

[node name="RotationHead" type="Node3D" parent="."]

[node name="BulletSpawner" type="Node3D" parent="RotationHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="EnemyBody" type="MeshInstance3D" parent="."]
transform = Transform3D(0.628325, 0, 0.777951, 0, 1, 0, -0.777951, 0, 0.628325, 0, 0, 0)
layers = 16
mesh = ExtResource("2_nc2fv")
skeleton = NodePath("../EnemyCollision")
surface_material_override/1 = ExtResource("3_e8lku")
surface_material_override/2 = ExtResource("3_e8lku")
surface_material_override/3 = ExtResource("3_e8lku")
surface_material_override/4 = ExtResource("3_e8lku")
surface_material_override/5 = ExtResource("3_e8lku")
surface_material_override/6 = ExtResource("3_e8lku")
surface_material_override/7 = ExtResource("3_e8lku")
surface_material_override/8 = ExtResource("3_e8lku")

[node name="EnemyCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_cpty7")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_ktd2o")
volume_db = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemyCollision")
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_1gdw3")
}

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
